fix mobile-home layout

--- a/index.html
+++ b/index.html
@@ -4,35 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="index.css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.icoo?v=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400;700;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Web Topics</title>
   </head>
   <body>
+    <header>
+      <div class="container-header-1">
+        <h1 class="web-topics">Web Topics</h1>
+        <div class="icons">
+          <button class="icon-button">
+            <ion-icon name="moon-outline"></ion-icon>
+          </button>
+          <button class="icon-button">
+            <ion-icon name="heart-outline"></ion-icon>
+          </button>
+        </div>
+      </div>
+      <div class="bar-header">
+        <div class="left-bar-header"></div>
+        <div class="right-bar-header"></div>
+      </div>
+      <div class="welcome-header">
+        <p class="welcome-header-1">Welcome to our website!</p>
+        <p class="welcome-header-2">
+          We have a new design that's fresh, modern, and easy to use
+        </p>
+      </div>
+    </header>
     <div class="container-home">
-      <header>
-        <div class="container-header-1">
-          <h1 class="web-topics">Web Topics</h1>
-          <div class="icons">
-            <button class="button-icon">
-              <ion-icon name="moon-outline"></ion-icon>
-            </button>
-            <button class="button-icon">
-              <ion-icon name="heart-outline"></ion-icon>
-            </button>
-          </div>
-        </div>
-        <div class="bar-header">
-          <div class="left-bar-header"></div>
-          <div class="right-bar-header"></div>
-        </div>
-        <div class="welcome-header">
-          <p class="welcome-header-1">Welcome to our website!</p>
-          <p class="welcome-header-2">
-            We have a new design that's fresh, modern, and easy to use
-          </p>
-        </div>
-      </header>
       <section class="search-bar">
         <ion-icon class="search-icon" name="search-outline"></ion-icon>
         <input
