--- a/index.html
+++ b/index.html
@@ -74,7 +74,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -84,7 +90,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">CSS</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-half"></ion-icon>
+            </div>
             <div class="Author-card">Author: David Lee</div>
           </div>
         </article>
@@ -94,7 +106,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -104,7 +122,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -114,7 +138,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -124,7 +154,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -134,7 +170,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -144,7 +186,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -154,7 +202,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -164,7 +218,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -174,7 +234,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -184,7 +250,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -194,7 +266,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -204,7 +282,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -214,7 +298,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -224,7 +314,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -234,7 +330,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -244,7 +346,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -254,7 +362,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -264,7 +378,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
@@ -274,7 +394,13 @@
           <div class="card-info">
             <div class="title-card">Web Development Languages</div>
             <div class="technology-card">HTML</div>
-            <div class="rating-card">4stars</div>
+            <div class="rating-card">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star-outline"></ion-icon>
+            </div>
             <div class="Author-card">Author: Sarah Smith</div>
           </div>
         </article>
