--- a/index.html
+++ b/index.html
@@ -469,24 +469,33 @@
         </a>
       </main>
     </div>
-
+    <section class="favourites">
+      <h4>My Favourite Topics</h4>
+      <div class="grid">
+        <div class="small-card">
+          <div
+            style="background-image: url(./assets/react.webp)"
+            class="small-card-content"
+          ></div>
+          <div class="small-card-content">
+            <h4>React</h4>
+            <div class="rating">
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+              <ion-icon class="star" name="star"></ion-icon>
+            </div>
+          </div>
+        </div>
+        <div class="small-card"></div>
+      </div>
+    </section>
     <footer>
       <span> Developed with love </span>
       <ion-icon name="heart" class="heart-icon"></ion-icon>
       <span>© 2023</span>
     </footer>
-    <!-- <section class="favourites">
-      <h4>My Favourite Topics</h4>
-      <div class="small-card">
-        <div
-          style="background-image: url(./assets/react.webp)"
-          class="small-card-content"
-        ></div>
-        <h4 class="small-card-contant">React</h4>
-        <div class="small-card-content"></div>
-      </div>
-      <div class="small-card"></div>
-    </section> -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
