add dark mode functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="icons">
         <button class="icon-button">
           <ion-icon name="moon-outline"></ion-icon>
-          <label class="button-label">Dark Mode</label>
+          <label class="button-label light">Light Mode</label>
+          <label class="button-label dark">Dark Mode</label>
         </button>
         <button class="icon-button">
           <ion-icon name="heart-outline"></ion-icon>
