add fav and details

--- a/HTML/details.html
+++ b/HTML/details.html
@@ -41,8 +41,8 @@
     </section>
     <main class="main-details">
       <div class="main-content">
-        <h3>Web Development Languages</h3>
-        <h2>HTML</h2>
+        <h3></h3>
+        <h2></h2>
         <div class="rating">
           <ion-icon class="star" name="star"></ion-icon>
           <ion-icon class="star" name="star"></ion-icon>
@@ -50,14 +50,7 @@
           <ion-icon class="star" name="star"></ion-icon>
           <ion-icon class="star" name="star"></ion-icon>
         </div>
-        <p>
-          HTML (Hypertext Markup Language) is the standard markup language for
-          creating web pages and other information that can be displayed in a
-          web browser. It provides a structure for content and defines how it
-          should be displayed on a web page, including text, images, and
-          multimedia. HTML is essential for creating static web pages and is a
-          foundational technology for the World Wide Web.
-        </p>
+        <p></p>
       </div>
       <div class="main-content card" href="../HTML/details.html">
         <div
@@ -65,12 +58,12 @@
           style="background-image: url(../assets/javascript.jpg)"
         ></div>
         <div class="card-content">
-          <h4 class="card-info">HTML</h4>
+          <h4 class="card-info"></h4>
           <span class="card-info">by</span>
-          <a class="card-info">Sarah Smith</a>
+          <a class="card-info"></a>
           <div class="card-info">
-            <div>Intersted about this topic?</div>
-            <button class="big-icon-button icon-button">
+            <div></div>
+            <button class="big-icon-button icon-button add">
               <label>Add To Favourites</label>
               <ion-icon name="heart-outline"></ion-icon>
             </button>
@@ -80,43 +73,37 @@
       </div>
       <table>
         <tr>
-          <td>HTML Sub Topics</td>
+          <td><span></span>Sub Topics</td>
         </tr>
         <tr>
           <td>
-            <ion-icon name="checkmark-circle-outline"></ion-icon>HTML syntax and
-            structure
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
           </td>
         </tr>
         <tr>
           <td>
-            <ion-icon name="checkmark-circle-outline"></ion-icon>HTML elements
-            and attributs
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
           </td>
         </tr>
 
         <tr>
           <td>
-            <ion-icon name="checkmark-circle-outline"></ion-icon>HTML forms and
-            input elements
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
           </td>
         </tr>
         <tr>
           <td>
-            <ion-icon name="checkmark-circle-outline"></ion-icon> HTML tabels
-            and lists
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
           </td>
         </tr>
         <tr>
           <td>
-            <ion-icon name="checkmark-circle-outline"></ion-icon> HTML
-            multimedia elements (audio, video, images)
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
           </td>
         </tr>
         <tr>
           <td>
-            <ion-icon name="checkmark-circle-outline"></ion-icon> Html
-            accessibility and semantic markup
+            <ion-icon name="checkmark-circle-outline"></ion-icon>
           </td>
         </tr>
       </table>
@@ -173,5 +160,7 @@
     ></script>
     <script src="../JS/show_fav.js"></script>
     <script src="../JS/dark_light_mode.js"></script>
+    <script type="module" src="../JS/Details/index.js"></script>
+    <script type="module" src="../JS/Favorites/index.js"></script>
   </body>
 </html>
