--- a/HTML/details.html
+++ b/HTML/details.html
@@ -43,13 +43,7 @@
       <div class="main-content">
         <h3></h3>
         <h2></h2>
-        <div class="rating">
-          <ion-icon class="star" name="star"></ion-icon>
-          <ion-icon class="star" name="star"></ion-icon>
-          <ion-icon class="star" name="star"></ion-icon>
-          <ion-icon class="star" name="star"></ion-icon>
-          <ion-icon class="star" name="star"></ion-icon>
-        </div>
+        <div class="rating"></div>
         <p></p>
       </div>
       <div class="main-content card" href="../HTML/details.html">
