--- a/index.html
+++ b/index.html
@@ -42,14 +42,19 @@
     <div class="main-container">
       <section class="search-bar">
         <ion-icon class="search-icon" name="search-outline"></ion-icon>
-        <input type="text" class="search-input" />
+        <input
+          type="text"
+          placeholder="Search The Web sute"
+          class="search-input"
+        />
         <div class="search-select-container">
           <label class="select-labels select-label-sort" for="sort"
             >Sort By:</label
           >
           <select name="sort" id="sort" class="search-select search-select-1">
-            <option value="default">Author Name</option>
-            <option value="Date">Topic Title</option>
+            <option value="default">Default</option>
+            <option value="name">Author Name</option>
+            <option value="topic">Topic Title</option>
           </select>
           <label class="select-labels select-label-filter" for="filter"
             >Filter By:</label
@@ -60,7 +65,6 @@
             class="search-select search-select-2"
           >
             <option value="default">Default</option>
-            <option value="author">Author</option>
           </select>
         </div>
       </section>
